--- a/example.ipynb
+++ b/example.ipynb
@@ -5,7 +5,20 @@
    "execution_count": 1,
    "id": "79d4b8f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'decision_curve' from 'sklearn.metrics' (c:\\Users\\ejohn\\Documents\\Fairness\\.venv\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfairness\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfair\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ejohn\\Documents\\Fairness\\fairness.py:234\u001b[39m\n\u001b[32m    231\u001b[39m     plt.legend()\n\u001b[32m    232\u001b[39m     plt.show()\n\u001b[32m--> \u001b[39m\u001b[32m234\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m decision_curve\n\u001b[32m    236\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdecision_analysis\u001b[39m(df, demographic, predicted_outcome, actual_outcome):\n\u001b[32m    237\u001b[39m     demographics = df[demographic].unique()\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'decision_curve' from 'sklearn.metrics' (c:\\Users\\ejohn\\Documents\\Fairness\\.venv\\Lib\\site-packages\\sklearn\\metrics\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import fairness as fair\n",
     "import numpy as np\n",
@@ -23,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "10928194",
    "metadata": {},
    "outputs": [
@@ -80,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cdb5ad9a",
    "metadata": {},
    "outputs": [
@@ -118,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "15a67bfb",
    "metadata": {},
    "outputs": [
@@ -157,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7faabf55",
    "metadata": {},
    "outputs": [
@@ -208,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "357e8e67",
    "metadata": {},
    "outputs": [
@@ -247,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d4dbb109",
    "metadata": {},
    "outputs": [
@@ -276,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fb3d2f9e",
    "metadata": {},
    "outputs": [
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1ccb622d",
    "metadata": {},
    "outputs": [
@@ -322,6 +335,104 @@
    ],
    "source": [
     "dca_curves = fair.decision_analysis(df, demographic, predicted_outcome, actual_outcome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b98bc447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ejohn\\Documents\\Fairness\\fairness.py:15: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  accuracy = icu_data.groupby(demographic_group).apply(\n",
+      "c:\\Users\\ejohn\\Documents\\Fairness\\fairness.py:41: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  f1_scores = icu_data.groupby(demographic_group).apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "df = pd.DataFrame({\n",
+    "    'predicted_mortality': np.random.randint(0, 2, size=1000),\n",
+    "    'actual_mortality': np.random.randint(0, 2, size=1000),\n",
+    "    'ethnicity': np.random.choice(['White', 'Black', 'Hispanic', 'Asian'], size=1000),\n",
+    "    'gender': np.random.choice(['Male', 'Female'], size=1000)\n",
+    "})\n",
+    "\n",
+    "#df.iloc[:750, :]['predicted_mortality'] = df.iloc[:750, :]['actual_mortality']  # Set first 750 rows of predicted_mortality to actual_mortality\n",
+    "df.loc[:749, \"predicted_mortality\"] = df.loc[:749, \"actual_mortality\"]  # Set first 750 rows of predicted_mortality to actual_mortality\n",
+    "\n",
+    "# Set parameters for fairness evaluation as you see fit\n",
+    "demographic = 'ethnicity'\n",
+    "fairness_threshold = 0.05\n",
+    "# ratio_threshold = 1.2 # optional paramter used in disparate_impact_ratio function\n",
+    "predicted_outcome = 'predicted_mortality'\n",
+    "actual_outcome = 'actual_mortality'\n",
+    "\n",
+    "plt.ioff()  # Disable interactive mode for matplotlib\n",
+    "\n",
+    "evaluated_metrics = fair.evaluate_fairness(\n",
+    "    df,\n",
+    "    demographic,\n",
+    "    predicted_outcome,\n",
+    "    actual_outcome,\n",
+    "    fairness_threshold\n",
+    ")\n",
+    "\n",
+    "plt.close('all')  # Close all matplotlib figures to avoid display issues in some environments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169b6e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ejohn\\Documents\\Fairness\\fairness.py:15: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  accuracy = icu_data.groupby(demographic_group).apply(\n",
+      "c:\\Users\\ejohn\\Documents\\Fairness\\fairness.py:41: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  f1_scores = icu_data.groupby(demographic_group).apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "df = pd.DataFrame({\n",
+    "    'predicted_mortality': np.random.randint(0, 2, size=1000),\n",
+    "    'actual_mortality': np.random.randint(0, 2, size=1000),\n",
+    "    'ethnicity': np.random.choice(['White', 'Black', 'Hispanic', 'Asian'], size=1000),\n",
+    "    'gender': np.random.choice(['Male', 'Female'], size=1000)\n",
+    "})\n",
+    "\n",
+    "#df.iloc[:750, :]['predicted_mortality'] = df.iloc[:750, :]['actual_mortality']  # Set first 750 rows of predicted_mortality to actual_mortality\n",
+    "df.loc[:749, \"predicted_mortality\"] = df.loc[:749, \"actual_mortality\"]  # Set first 750 rows of predicted_mortality to actual_mortality\n",
+    "\n",
+    "# Set parameters for fairness evaluation as you see fit\n",
+    "demographic = 'ethnicity'\n",
+    "fairness_threshold = 0.05\n",
+    "# ratio_threshold = 1.2 # optional paramter used in disparate_impact_ratio function\n",
+    "predicted_outcome = 'predicted_mortality'\n",
+    "actual_outcome = 'actual_mortality'\n",
+    "\n",
+    "plt.ioff()  # Disable interactive mode for matplotlib\n",
+    "\n",
+    "evaluated_metrics = fair.evaluate_fairness(\n",
+    "    df,\n",
+    "    demographic,\n",
+    "    predicted_outcome,\n",
+    "    actual_outcome,\n",
+    "    fairness_threshold\n",
+    ")\n",
+    "\n",
+    "plt.close('all')  # Close all matplotlib figures to avoid display issues in some environments"
    ]
   }
  ],
